welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:9: error: ')' expected but ';' found.
                                        for (i <- 0 to T.length-1) {setCouleurBrosse(T((i+decal)%getMondeHauteur);
                                                                                                                 ^